# CardGameLib

./: .gitignore  CMakeLists.txt  card.cpp  card.h  deck.cpp  deck.h  hand.cpp  hand.h  main.cpp
.cache/clangd/index/: card.cpp.6E1CC107266F321D.idx  card.h.C20A5CDAEFDAAF3E.idx  deck.cpp.DBB7705388BB7ADC.idx  deck.h.98946A057AC86C98.idx  hand.cpp.254829E4819036CF.idx  hand.h.6D3E3984F9EAF3DF.idx  main.cpp.0955AA505F5092CA.idx
